--- a/styles.css
+++ b/styles.css
@@ -25,3 +25,8 @@ h3
     height:15%;
     border-radius: 50px;
 }
+#info{
+    padding-bottom: 20px;
+    border-bottom: 3px solid grey;
+    margin-bottom: 20px;
+}
